First working version

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,9 @@
 		<script src="/common/jquery.lang.string.js"></script>
 		<script src="/common/jquery.class.js"></script>
 		<script src="/common/jquery.websocket.js"></script>
+		<script src="/client/jquery.mobile.js"></script>
+		<script src="/client/modernizr.js"></script>
+		<script src="/config.js"></script>
 		<script src="/client/client.js"></script>
 	</head>
 	<body>
