--- a/display/index.html
+++ b/display/index.html
@@ -10,6 +10,7 @@
 		<script src="/common/jquery.lang.string.js"></script>
 		<script src="/common/jquery.class.js"></script>
 		<script src="/common/jquery.websocket.js"></script>
+		<script src="/config.js"></script>
 		<script src="/display/player.js"></script>
 		<script src="/display/ball.js"></script>
 		<script src="/display/display.js"></script>
