Adds support for touch move events

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 		<script src="/common/jquery.class.js"></script>
 		<script src="/common/jquery.websocket.js"></script>
 		<script src="/client/jquery.mobile.js"></script>
+		<script src="/client/jquery.event.move.js"></script>
 		<script src="/client/modernizr.js"></script>
 		<script src="/config.js"></script>
 		<script src="/client/client.js"></script>
