--- a/display/index.html
+++ b/display/index.html
@@ -10,6 +10,7 @@
 		<script src="/common/jquery.lang.string.js"></script>
 		<script src="/common/jquery.class.js"></script>
 		<script src="/common/jquery.websocket.js"></script>
+		<script src="/display/jquery.qrcode.js"></script>
 		<script src="/config.js"></script>
 		<script src="/display/player.js"></script>
 		<script src="/display/ball.js"></script>
@@ -19,6 +20,11 @@
 
 		<div id="playground">
 			<div id="divider"></div>
+		</div>
+
+		<div id="qr">
+			<div class="code"></div>
+			<div class="qr_label">Join the game!</div>
 		</div>
 
 		<script>
